# PodPod_Backend_FastAPI

./: .dockerignore  .env.example  .gitignore  .gitmessage.txt  .infisical.json  Dockerfile  ENV_SETUP.md  GCP_DEPLOYMENT.md  MIGRATION_TODO.md  README.md  alembic.ini  auth.py  commit-prompt.txt  config.dev.yaml  config.prod.yaml  config.stg.yaml  config.yaml  cursor.md  db.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stg.yml  error_codes_backup.json  execute_sql.sh  fix_pydantic_alias.py  main.py  makefile  migrate.sh  mvp_artists.json  mvp_tend_test_result.json  mvp_tend_test_survey.json  pyproject.toml  requirements.txt  run  run.py  run_with_infisical.py  test1234  test1234.pub  test_form_model.py  todo.md
services/api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/api/app/: __init__.py  models.py
services/api/app/api/v1/: router.py
services/api/app/common/: __init__.py  abstract_router.py
services/api/app/common/schemas/: base_response.py  page_dto.py
services/api/app/core/: __init__.py  config.py  container.py  database.py  error_codes.py  errors.py  exception_loader.py  exceptions.py  fcm.py  logger.py  logging_config.py  scheduler.py  security.py  session.py  startup.py
services/api/app/core/containers/: __init__.py  (+13 more)
services/api/app/middleware/: logging_middleware.py
services/api/app/utils/: __init__.py  file_upload.py  form_parser.py
services/api/scripts/: sync_error_codes_to_sheet.py  sync_notification_types_to_sheet.py  sync_reminder_types_to_sheet.py
services/api/settings/: openapi_tags.py
(+743 files in other folders)
